lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program_ins program
Rule 2     program -> program_ins
Rule 3     program_ins -> PRINT value ;
Rule 4     program_ins -> assign ;
Rule 5     program_ins -> cond_instruction
Rule 6     program_ins -> while_instruction
Rule 7     program_ins -> for_instruction
Rule 8     program_ins -> { program }
Rule 9     program_ins -> BREAK ;
Rule 10    program_ins -> CONTINUE ;
Rule 11    program_ins -> RETURN operation ;
Rule 12    program_ins -> COMMENT
Rule 13    value -> all_operations , value
Rule 14    value -> all_operations
Rule 15    assign -> id_assign
Rule 16    assign -> matrix_assign
Rule 17    id_assign -> id = all_operations
Rule 18    id_assign -> id = vector
Rule 19    id_assign -> id assign_operator operation
Rule 20    all_operations -> operation
Rule 21    all_operations -> string
Rule 22    string -> STRING
Rule 23    assign_operator -> ADDASSIGN
Rule 24    assign_operator -> SUBASSIGN
Rule 25    assign_operator -> MULASSIGN
Rule 26    assign_operator -> DIVASSIGN
Rule 27    operation -> numeric_operation
Rule 28    operation -> matrix_operation
Rule 29    matrix_assign -> id [ multiple_index ] = numeric_operation
Rule 30    matrix_assign -> id [ multiple_index ] assign_operator numeric_operation
Rule 31    matrix_assign -> id [ single_index ] = vector
Rule 32    matrix_assign -> id [ single_index ] = numeric_operation
Rule 33    matrix_assign -> id [ single_index ] assign_operator numeric_operation
Rule 34    multiple_index -> INTNUM , INTNUM
Rule 35    single_index -> INTNUM
Rule 36    vector -> [ vector_val ]
Rule 37    vector_val -> numeric_operation , vector_val
Rule 38    vector_val -> numeric_operation
Rule 39    numeric_operation -> numeric_operation + numeric_operation
Rule 40    numeric_operation -> numeric_operation - numeric_operation
Rule 41    numeric_operation -> numeric_operation * numeric_operation
Rule 42    numeric_operation -> numeric_operation / numeric_operation
Rule 43    numeric_operation -> - numeric_operation
Rule 44    numeric_operation -> ( numeric_operation )
Rule 45    numeric_operation -> id
Rule 46    numeric_operation -> INTNUM
Rule 47    numeric_operation -> FLOATNUM
Rule 48    matrix_operation -> matrix_operation matrix_operator_mul matrix_operation
Rule 49    matrix_operation -> matrix_operation matrix_operator_add matrix_operation
Rule 50    matrix_operation -> matrix_operation '
Rule 51    matrix_operation -> ( matrix_operation )
Rule 52    matrix_operation -> id_form
Rule 53    matrix_operation -> fid ( numeric_operation )
Rule 54    matrix_operation -> [ matrix ]
Rule 55    id_form -> id '
Rule 56    id_form -> id matrix_operator_mul matrix_operation
Rule 57    id_form -> matrix_operation matrix_operator_mul id
Rule 58    id_form -> id matrix_operator_mul id
Rule 59    id_form -> id matrix_operator_add matrix_operation
Rule 60    id_form -> matrix_operation matrix_operator_add id
Rule 61    id_form -> id matrix_operator_add id
Rule 62    matrix_operator_mul -> DOTMUL
Rule 63    matrix_operator_mul -> DOTDIV
Rule 64    matrix_operator_add -> DOTADD
Rule 65    matrix_operator_add -> DOTSUB
Rule 66    id -> ID
Rule 67    fid -> ZEROS
Rule 68    fid -> ONES
Rule 69    fid -> EYE
Rule 70    matrix -> vector , matrix
Rule 71    matrix -> vector
Rule 72    cond_instruction -> IF ( condition ) program_ins
Rule 73    cond_instruction -> IF ( condition ) program_ins ELSE program_ins
Rule 74    condition -> operation comparison_operator operation
Rule 75    comparison_operator -> EQ
Rule 76    comparison_operator -> NEQ
Rule 77    comparison_operator -> LT
Rule 78    comparison_operator -> GT
Rule 79    comparison_operator -> <
Rule 80    comparison_operator -> >
Rule 81    while_instruction -> WHILE ( condition ) program_ins
Rule 82    for_instruction -> FOR id = range program_ins
Rule 83    range -> numeric_operation : numeric_operation

Terminals, with rules where they appear

'                    : 50 55
(                    : 44 51 53 72 73 81
)                    : 44 51 53 72 73 81
*                    : 41
+                    : 39
,                    : 13 34 37 70
-                    : 40 43
/                    : 42
:                    : 83
;                    : 3 4 9 10 11
<                    : 79
=                    : 17 18 29 31 32 82
>                    : 80
ADDASSIGN            : 23
BREAK                : 9
COMMENT              : 12
CONTINUE             : 10
DIVASSIGN            : 26
DOTADD               : 64
DOTDIV               : 63
DOTMUL               : 62
DOTSUB               : 65
ELSE                 : 73
EQ                   : 75
EYE                  : 69
FLOATNUM             : 47
FOR                  : 82
GT                   : 78
ID                   : 66
IF                   : 72 73
INTNUM               : 34 34 35 46
LT                   : 77
MULASSIGN            : 25
NEQ                  : 76
ONES                 : 68
PRINT                : 3
RETURN               : 11
STRING               : 22
SUBASSIGN            : 24
WHILE                : 81
ZEROS                : 67
[                    : 29 30 31 32 33 36 54
]                    : 29 30 31 32 33 36 54
error                : 
{                    : 8
}                    : 8

Nonterminals, with rules where they appear

all_operations       : 13 14 17
assign               : 4
assign_operator      : 19 30 33
comparison_operator  : 74
cond_instruction     : 5
condition            : 72 73 81
fid                  : 53
for_instruction      : 7
id                   : 17 18 19 29 30 31 32 33 45 55 56 57 58 58 59 60 61 61 82
id_assign            : 15
id_form              : 52
matrix               : 54 70
matrix_assign        : 16
matrix_operation     : 28 48 48 49 49 50 51 56 57 59 60
matrix_operator_add  : 49 59 60 61
matrix_operator_mul  : 48 56 57 58
multiple_index       : 29 30
numeric_operation    : 27 29 30 32 33 37 38 39 39 40 40 41 41 42 42 43 44 53 83 83
operation            : 11 19 20 74 74
program              : 1 8 0
program_ins          : 1 2 72 73 73 81 82
range                : 82
single_index         : 31 32 33
string               : 21
value                : 3 13
vector               : 18 31 70 71
vector_val           : 36 37
while_instruction    : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_ins program
    (2) program -> . program_ins
    (3) program_ins -> . PRINT value ;
    (4) program_ins -> . assign ;
    (5) program_ins -> . cond_instruction
    (6) program_ins -> . while_instruction
    (7) program_ins -> . for_instruction
    (8) program_ins -> . { program }
    (9) program_ins -> . BREAK ;
    (10) program_ins -> . CONTINUE ;
    (11) program_ins -> . RETURN operation ;
    (12) program_ins -> . COMMENT
    (15) assign -> . id_assign
    (16) assign -> . matrix_assign
    (72) cond_instruction -> . IF ( condition ) program_ins
    (73) cond_instruction -> . IF ( condition ) program_ins ELSE program_ins
    (81) while_instruction -> . WHILE ( condition ) program_ins
    (82) for_instruction -> . FOR id = range program_ins
    (17) id_assign -> . id = all_operations
    (18) id_assign -> . id = vector
    (19) id_assign -> . id assign_operator operation
    (29) matrix_assign -> . id [ multiple_index ] = numeric_operation
    (30) matrix_assign -> . id [ multiple_index ] assign_operator numeric_operation
    (31) matrix_assign -> . id [ single_index ] = vector
    (32) matrix_assign -> . id [ single_index ] = numeric_operation
    (33) matrix_assign -> . id [ single_index ] assign_operator numeric_operation
    (66) id -> . ID

    PRINT           shift and go to state 3
    {               shift and go to state 8
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    RETURN          shift and go to state 11
    COMMENT         shift and go to state 12
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    ID              shift and go to state 19

    program                        shift and go to state 1
    program_ins                    shift and go to state 2
    assign                         shift and go to state 4
    cond_instruction               shift and go to state 5
    while_instruction              shift and go to state 6
    for_instruction                shift and go to state 7
    id_assign                      shift and go to state 13
    matrix_assign                  shift and go to state 14
    id                             shift and go to state 18

state 1

    (0) S' -> program .



state 2

    (1) program -> program_ins . program
    (2) program -> program_ins .
    (1) program -> . program_ins program
    (2) program -> . program_ins
    (3) program_ins -> . PRINT value ;
    (4) program_ins -> . assign ;
    (5) program_ins -> . cond_instruction
    (6) program_ins -> . while_instruction
    (7) program_ins -> . for_instruction
    (8) program_ins -> . { program }
    (9) program_ins -> . BREAK ;
    (10) program_ins -> . CONTINUE ;
    (11) program_ins -> . RETURN operation ;
    (12) program_ins -> . COMMENT
    (15) assign -> . id_assign
    (16) assign -> . matrix_assign
    (72) cond_instruction -> . IF ( condition ) program_ins
    (73) cond_instruction -> . IF ( condition ) program_ins ELSE program_ins
    (81) while_instruction -> . WHILE ( condition ) program_ins
    (82) for_instruction -> . FOR id = range program_ins
    (17) id_assign -> . id = all_operations
    (18) id_assign -> . id = vector
    (19) id_assign -> . id assign_operator operation
    (29) matrix_assign -> . id [ multiple_index ] = numeric_operation
    (30) matrix_assign -> . id [ multiple_index ] assign_operator numeric_operation
    (31) matrix_assign -> . id [ single_index ] = vector
    (32) matrix_assign -> . id [ single_index ] = numeric_operation
    (33) matrix_assign -> . id [ single_index ] assign_operator numeric_operation
    (66) id -> . ID

    $end            reduce using rule 2 (program -> program_ins .)
    }               reduce using rule 2 (program -> program_ins .)
    PRINT           shift and go to state 3
    {               shift and go to state 8
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    RETURN          shift and go to state 11
    COMMENT         shift and go to state 12
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    ID              shift and go to state 19

    program_ins                    shift and go to state 2
    program                        shift and go to state 20
    assign                         shift and go to state 4
    cond_instruction               shift and go to state 5
    while_instruction              shift and go to state 6
    for_instruction                shift and go to state 7
    id_assign                      shift and go to state 13
    matrix_assign                  shift and go to state 14
    id                             shift and go to state 18

state 3

    (3) program_ins -> PRINT . value ;
    (13) value -> . all_operations , value
    (14) value -> . all_operations
    (20) all_operations -> . operation
    (21) all_operations -> . string
    (27) operation -> . numeric_operation
    (28) operation -> . matrix_operation
    (22) string -> . STRING
    (39) numeric_operation -> . numeric_operation + numeric_operation
    (40) numeric_operation -> . numeric_operation - numeric_operation
    (41) numeric_operation -> . numeric_operation * numeric_operation
    (42) numeric_operation -> . numeric_operation / numeric_operation
    (43) numeric_operation -> . - numeric_operation
    (44) numeric_operation -> . ( numeric_operation )
    (45) numeric_operation -> . id
    (46) numeric_operation -> . INTNUM
    (47) numeric_operation -> . FLOATNUM
    (48) matrix_operation -> . matrix_operation matrix_operator_mul matrix_operation
    (49) matrix_operation -> . matrix_operation matrix_operator_add matrix_operation
    (50) matrix_operation -> . matrix_operation '
    (51) matrix_operation -> . ( matrix_operation )
    (52) matrix_operation -> . id_form
    (53) matrix_operation -> . fid ( numeric_operation )
    (54) matrix_operation -> . [ matrix ]
    (66) id -> . ID
    (55) id_form -> . id '
    (56) id_form -> . id matrix_operator_mul matrix_operation
    (57) id_form -> . matrix_operation matrix_operator_mul id
    (58) id_form -> . id matrix_operator_mul id
    (59) id_form -> . id matrix_operator_add matrix_operation
    (60) id_form -> . matrix_operation matrix_operator_add id
    (61) id_form -> . id matrix_operator_add id
    (67) fid -> . ZEROS
    (68) fid -> . ONES
    (69) fid -> . EYE

    STRING          shift and go to state 27
    -               shift and go to state 28
    (               shift and go to state 29
    INTNUM          shift and go to state 31
    FLOATNUM        shift and go to state 32
    [               shift and go to state 35
    ID              shift and go to state 19
    ZEROS           shift and go to state 36
    ONES            shift and go to state 37
    EYE             shift and go to state 38

    value                          shift and go to state 21
    all_operations                 shift and go to state 22
    operation                      shift and go to state 23
    string                         shift and go to state 24
    numeric_operation              shift and go to state 25
    matrix_operation               shift and go to state 26
    id                             shift and go to state 30
    id_form                        shift and go to state 33
    fid                            shift and go to state 34

state 4

    (4) program_ins -> assign . ;

    ;               shift and go to state 39


state 5

    (5) program_ins -> cond_instruction .

    PRINT           reduce using rule 5 (program_ins -> cond_instruction .)
    {               reduce using rule 5 (program_ins -> cond_instruction .)
    BREAK           reduce using rule 5 (program_ins -> cond_instruction .)
    CONTINUE        reduce using rule 5 (program_ins -> cond_instruction .)
    RETURN          reduce using rule 5 (program_ins -> cond_instruction .)
    COMMENT         reduce using rule 5 (program_ins -> cond_instruction .)
    IF              reduce using rule 5 (program_ins -> cond_instruction .)
    WHILE           reduce using rule 5 (program_ins -> cond_instruction .)
    FOR             reduce using rule 5 (program_ins -> cond_instruction .)
    ID              reduce using rule 5 (program_ins -> cond_instruction .)
    $end            reduce using rule 5 (program_ins -> cond_instruction .)
    }               reduce using rule 5 (program_ins -> cond_instruction .)
    ELSE            reduce using rule 5 (program_ins -> cond_instruction .)


state 6

    (6) program_ins -> while_instruction .

    PRINT           reduce using rule 6 (program_ins -> while_instruction .)
    {               reduce using rule 6 (program_ins -> while_instruction .)
    BREAK           reduce using rule 6 (program_ins -> while_instruction .)
    CONTINUE        reduce using rule 6 (program_ins -> while_instruction .)
    RETURN          reduce using rule 6 (program_ins -> while_instruction .)
    COMMENT         reduce using rule 6 (program_ins -> while_instruction .)
    IF              reduce using rule 6 (program_ins -> while_instruction .)
    WHILE           reduce using rule 6 (program_ins -> while_instruction .)
    FOR             reduce using rule 6 (program_ins -> while_instruction .)
    ID              reduce using rule 6 (program_ins -> while_instruction .)
    $end            reduce using rule 6 (program_ins -> while_instruction .)
    }               reduce using rule 6 (program_ins -> while_instruction .)
    ELSE            reduce using rule 6 (program_ins -> while_instruction .)


state 7

    (7) program_ins -> for_instruction .

    PRINT           reduce using rule 7 (program_ins -> for_instruction .)
    {               reduce using rule 7 (program_ins -> for_instruction .)
    BREAK           reduce using rule 7 (program_ins -> for_instruction .)
    CONTINUE        reduce using rule 7 (program_ins -> for_instruction .)
    RETURN          reduce using rule 7 (program_ins -> for_instruction .)
    COMMENT         reduce using rule 7 (program_ins -> for_instruction .)
    IF              reduce using rule 7 (program_ins -> for_instruction .)
    WHILE           reduce using rule 7 (program_ins -> for_instruction .)
    FOR             reduce using rule 7 (program_ins -> for_instruction .)
    ID              reduce using rule 7 (program_ins -> for_instruction .)
    $end            reduce using rule 7 (program_ins -> for_instruction .)
    }               reduce using rule 7 (program_ins -> for_instruction .)
    ELSE            reduce using rule 7 (program_ins -> for_instruction .)


state 8

    (8) program_ins -> { . program }
    (1) program -> . program_ins program
    (2) program -> . program_ins
    (3) program_ins -> . PRINT value ;
    (4) program_ins -> . assign ;
    (5) program_ins -> . cond_instruction
    (6) program_ins -> . while_instruction
    (7) program_ins -> . for_instruction
    (8) program_ins -> . { program }
    (9) program_ins -> . BREAK ;
    (10) program_ins -> . CONTINUE ;
    (11) program_ins -> . RETURN operation ;
    (12) program_ins -> . COMMENT
    (15) assign -> . id_assign
    (16) assign -> . matrix_assign
    (72) cond_instruction -> . IF ( condition ) program_ins
    (73) cond_instruction -> . IF ( condition ) program_ins ELSE program_ins
    (81) while_instruction -> . WHILE ( condition ) program_ins
    (82) for_instruction -> . FOR id = range program_ins
    (17) id_assign -> . id = all_operations
    (18) id_assign -> . id = vector
    (19) id_assign -> . id assign_operator operation
    (29) matrix_assign -> . id [ multiple_index ] = numeric_operation
    (30) matrix_assign -> . id [ multiple_index ] assign_operator numeric_operation
    (31) matrix_assign -> . id [ single_index ] = vector
    (32) matrix_assign -> . id [ single_index ] = numeric_operation
    (33) matrix_assign -> . id [ single_index ] assign_operator numeric_operation
    (66) id -> . ID

    PRINT           shift and go to state 3
    {               shift and go to state 8
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    RETURN          shift and go to state 11
    COMMENT         shift and go to state 12
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    ID              shift and go to state 19

    program                        shift and go to state 40
    program_ins                    shift and go to state 2
    assign                         shift and go to state 4
    cond_instruction               shift and go to state 5
    while_instruction              shift and go to state 6
    for_instruction                shift and go to state 7
    id_assign                      shift and go to state 13
    matrix_assign                  shift and go to state 14
    id                             shift and go to state 18

state 9

    (9) program_ins -> BREAK . ;

    ;               shift and go to state 41


state 10

    (10) program_ins -> CONTINUE . ;

    ;               shift and go to state 42


state 11

    (11) program_ins -> RETURN . operation ;
    (27) operation -> . numeric_operation
    (28) operation -> . matrix_operation
    (39) numeric_operation -> . numeric_operation + numeric_operation
    (40) numeric_operation -> . numeric_operation - numeric_operation
    (41) numeric_operation -> . numeric_operation * numeric_operation
    (42) numeric_operation -> . numeric_operation / numeric_operation
    (43) numeric_operation -> . - numeric_operation
    (44) numeric_operation -> . ( numeric_operation )
    (45) numeric_operation -> . id
    (46) numeric_operation -> . INTNUM
    (47) numeric_operation -> . FLOATNUM
    (48) matrix_operation -> . matrix_operation matrix_operator_mul matrix_operation
    (49) matrix_operation -> . matrix_operation matrix_operator_add matrix_operation
    (50) matrix_operation -> . matrix_operation '
    (51) matrix_operation -> . ( matrix_operation )
    (52) matrix_operation -> . id_form
    (53) matrix_operation -> . fid ( numeric_operation )
    (54) matrix_operation -> . [ matrix ]
    (66) id -> . ID
    (55) id_form -> . id '
    (56) id_form -> . id matrix_operator_mul matrix_operation
    (57) id_form -> . matrix_operation matrix_operator_mul id
    (58) id_form -> . id matrix_operator_mul id
    (59) id_form -> . id matrix_operator_add matrix_operation
    (60) id_form -> . matrix_operation matrix_operator_add id
    (61) id_form -> . id matrix_operator_add id
    (67) fid -> . ZEROS
    (68) fid -> . ONES
    (69) fid -> . EYE

    -               shift and go to state 28
    (               shift and go to state 29
    INTNUM          shift and go to state 31
    FLOATNUM        shift and go to state 32
    [               shift and go to state 35
    ID              shift and go to state 19
    ZEROS           shift and go to state 36
    ONES            shift and go to state 37
    EYE             shift and go to state 38

    operation                      shift and go to state 43
    numeric_operation              shift and go to state 25
    matrix_operation               shift and go to state 26
    id                             shift and go to state 30
    id_form                        shift and go to state 33
    fid                            shift and go to state 34

state 12

    (12) program_ins -> COMMENT .

    PRINT           reduce using rule 12 (program_ins -> COMMENT .)
    {               reduce using rule 12 (program_ins -> COMMENT .)
    BREAK           reduce using rule 12 (program_ins -> COMMENT .)
    CONTINUE        reduce using rule 12 (program_ins -> COMMENT .)
    RETURN          reduce using rule 12 (program_ins -> COMMENT .)
    COMMENT         reduce using rule 12 (program_ins -> COMMENT .)
    IF              reduce using rule 12 (program_ins -> COMMENT .)
    WHILE           reduce using rule 12 (program_ins -> COMMENT .)
    FOR             reduce using rule 12 (program_ins -> COMMENT .)
    ID              reduce using rule 12 (program_ins -> COMMENT .)
    $end            reduce using rule 12 (program_ins -> COMMENT .)
    }               reduce using rule 12 (program_ins -> COMMENT .)
    ELSE            reduce using rule 12 (program_ins -> COMMENT .)


state 13

    (15) assign -> id_assign .

    ;               reduce using rule 15 (assign -> id_assign .)


state 14

    (16) assign -> matrix_assign .

    ;               reduce using rule 16 (assign -> matrix_assign .)


state 15

    (72) cond_instruction -> IF . ( condition ) program_ins
    (73) cond_instruction -> IF . ( condition ) program_ins ELSE program_ins

    (               shift and go to state 44


state 16

    (81) while_instruction -> WHILE . ( condition ) program_ins

    (               shift and go to state 45


state 17

    (82) for_instruction -> FOR . id = range program_ins
    (66) id -> . ID

    ID              shift and go to state 19

    id                             shift and go to state 46

state 18

    (17) id_assign -> id . = all_operations
    (18) id_assign -> id . = vector
    (19) id_assign -> id . assign_operator operation
    (29) matrix_assign -> id . [ multiple_index ] = numeric_operation
    (30) matrix_assign -> id . [ multiple_index ] assign_operator numeric_operation
    (31) matrix_assign -> id . [ single_index ] = vector
    (32) matrix_assign -> id . [ single_index ] = numeric_operation
    (33) matrix_assign -> id . [ single_index ] assign_operator numeric_operation
    (23) assign_operator -> . ADDASSIGN
    (24) assign_operator -> . SUBASSIGN
    (25) assign_operator -> . MULASSIGN
    (26) assign_operator -> . DIVASSIGN

    =               shift and go to state 47
    [               shift and go to state 49
    ADDASSIGN       shift and go to state 50
    SUBASSIGN       shift and go to state 51
    MULASSIGN       shift and go to state 52
    DIVASSIGN       shift and go to state 53

    assign_operator                shift and go to state 48

state 19

    (66) id -> ID .

    =               reduce using rule 66 (id -> ID .)
    [               reduce using rule 66 (id -> ID .)
    ADDASSIGN       reduce using rule 66 (id -> ID .)
    SUBASSIGN       reduce using rule 66 (id -> ID .)
    MULASSIGN       reduce using rule 66 (id -> ID .)
    DIVASSIGN       reduce using rule 66 (id -> ID .)
    '               reduce using rule 66 (id -> ID .)
    DOTMUL          reduce using rule 66 (id -> ID .)
    DOTDIV          reduce using rule 66 (id -> ID .)
    DOTADD          reduce using rule 66 (id -> ID .)
    DOTSUB          reduce using rule 66 (id -> ID .)
    +               reduce using rule 66 (id -> ID .)
    -               reduce using rule 66 (id -> ID .)
    *               reduce using rule 66 (id -> ID .)
    /               reduce using rule 66 (id -> ID .)
    ,               reduce using rule 66 (id -> ID .)
    ;               reduce using rule 66 (id -> ID .)
    )               reduce using rule 66 (id -> ID .)
    EQ              reduce using rule 66 (id -> ID .)
    NEQ             reduce using rule 66 (id -> ID .)
    LT              reduce using rule 66 (id -> ID .)
    GT              reduce using rule 66 (id -> ID .)
    <               reduce using rule 66 (id -> ID .)
    >               reduce using rule 66 (id -> ID .)
    ]               reduce using rule 66 (id -> ID .)
    :               reduce using rule 66 (id -> ID .)
    PRINT           reduce using rule 66 (id -> ID .)
    {               reduce using rule 66 (id -> ID .)
    BREAK           reduce using rule 66 (id -> ID .)
    CONTINUE        reduce using rule 66 (id -> ID .)
    RETURN          reduce using rule 66 (id -> ID .)
    COMMENT         reduce using rule 66 (id -> ID .)
    IF              reduce using rule 66 (id -> ID .)
    WHILE           reduce using rule 66 (id -> ID .)
    FOR             reduce using rule 66 (id -> ID .)
    ID              reduce using rule 66 (id -> ID .)


state 20

    (1) program -> program_ins program .

    $end            reduce using rule 1 (program -> program_ins program .)
    }               reduce using rule 1 (program -> program_ins program .)


state 21

    (3) program_ins -> PRINT value . ;

    ;               shift and go to state 54


state 22

    (13) value -> all_operations . , value
    (14) value -> all_operations .

    ,               shift and go to state 55
    ;               reduce using rule 14 (value -> all_operations .)


state 23

    (20) all_operations -> operation .

    ,               reduce using rule 20 (all_operations -> operation .)
    ;               reduce using rule 20 (all_operations -> operation .)


state 24

    (21) all_operations -> string .

    ,               reduce using rule 21 (all_operations -> string .)
    ;               reduce using rule 21 (all_operations -> string .)


state 25

    (27) operation -> numeric_operation .
    (39) numeric_operation -> numeric_operation . + numeric_operation
    (40) numeric_operation -> numeric_operation . - numeric_operation
    (41) numeric_operation -> numeric_operation . * numeric_operation
    (42) numeric_operation -> numeric_operation . / numeric_operation

    ,               reduce using rule 27 (operation -> numeric_operation .)
    ;               reduce using rule 27 (operation -> numeric_operation .)
    EQ              reduce using rule 27 (operation -> numeric_operation .)
    NEQ             reduce using rule 27 (operation -> numeric_operation .)
    LT              reduce using rule 27 (operation -> numeric_operation .)
    GT              reduce using rule 27 (operation -> numeric_operation .)
    <               reduce using rule 27 (operation -> numeric_operation .)
    >               reduce using rule 27 (operation -> numeric_operation .)
    )               reduce using rule 27 (operation -> numeric_operation .)
    +               shift and go to state 56
    -               shift and go to state 57
    *               shift and go to state 58
    /               shift and go to state 59


state 26

    (28) operation -> matrix_operation .
    (48) matrix_operation -> matrix_operation . matrix_operator_mul matrix_operation
    (49) matrix_operation -> matrix_operation . matrix_operator_add matrix_operation
    (50) matrix_operation -> matrix_operation . '
    (57) id_form -> matrix_operation . matrix_operator_mul id
    (60) id_form -> matrix_operation . matrix_operator_add id
    (62) matrix_operator_mul -> . DOTMUL
    (63) matrix_operator_mul -> . DOTDIV
    (64) matrix_operator_add -> . DOTADD
    (65) matrix_operator_add -> . DOTSUB
